# physics_sandbox

./: .clang-tidy  .env  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  compose.dev.yml  compose.yaml
config/: config.json  config_pid.json
include/: circle_graphics.hpp  common.hpp  common_graphics.hpp  constraints.hpp  control.hpp  dynamics.hpp  graphics.hpp  ini.hpp  input.hpp  integrator.hpp  manager.hpp  object.hpp  particle.hpp  physics.hpp  rectangle.hpp  rectangle_graphics.hpp  sensor.hpp  simulator.hpp  solver.hpp  utils.hpp  utils_control.hpp
src/: common_graphics.cpp  constraints.cpp  constraints_example.cpp  control.cpp  double_pendulum.cpp  dynamics.cpp  graphics.cpp  graphics.h  ini.h  input.cpp  integrator.cpp  inverted_pendulum.cpp  linear_constraint_example.cpp  main.cpp  manager.cpp  manager.h  n_pendulum.cpp  object.cpp  particle.cpp  physics.cpp  physics.h  physics_sandbox.cpp  rectangle.cpp  rectangle_example.cpp  sensor.cpp  simulator.cpp  test.cpp  utils.cpp  utils_control.cpp
test/: test_dynamics.cpp
